--- a/phyllotaxis/package.json
+++ b/phyllotaxis/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "text",
+  "name": "phyllotaxis",
   "version": "1.0.0",
   "private": true,
   "author": "Edgardo Avilés <eaviles@gmail.com>",
